safar app introduced

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 		<p>This website is created and maintained by <a href="https://rajdip2852.dscnsec.com" style="letter-spacing: 0;color: #fff;text-decoration: none;">Rajdip Mondal</a></p>
 		<br>
 		<p>All the images and text are subject to copyright. The information shown in each page are comprehensively calculated and are updated regularly. Don't forget to check the link to Official State Tourism site before finalizing your tour plan.</p>
+		<View style="text-align: center;">
+			<p>Soon to be on google play store</p>
+			<Image src="googleplay.png" style="margin-top: 5;margin-bottom: 5;height: 100;"/>
+			<a style="letter-spacing: 0;text-align: center;color: #fff;" href="https://drive.google.com/uc?export=download&id=1z37AtC8a1znInwSW9_Kz5pqfsH-o7UtC" download><p>Get an early access to the app</p></a>
+			</View>
 	</div>
 <script type="text/javascript" src="modal.js"></script>
 <script type="text/javascript" src="vanilla-tilt.js"></script>
